--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
-API_KEY=your_api_key_here
-DB_PASSWORD=your_db_password_here
+API_KEY = your_api_key_here;
+TOKEN = your_token_here;
+BOARD_ID = your_board_id_here;
