started writing functions

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 API_KEY = your_api_key_here;
 TOKEN = your_token_here;
 BOARD_ID = your_board_id_here;
+SHEET_ID = your_sheet_id_here;
+SHEET_NAME = your_sheet_name_here;
